test/mutation_analysis/s0392_is_subsequence/hafis/starchat/mutants/6/result.txt
./test/mutation_analysis/s0392_is_subsequence/hafis/starchat/mutants/6/Solution.java:31: warning: A non-pure method is being called where it is not permitted: java.lang.String.contains(java.lang.CharSequence)
//@ ensures((t.contains(s)) ==> (\result == true));
                       ^
./test/mutation_analysis/s0392_is_subsequence/hafis/starchat/mutants/6/Solution.java:47: error: unreachable statement
        while (false) {
                      ^
1 error
1 warning
